# BNOS---Bionic-Neural-Network-Visual-Orchestration-Platform

./: .gitignore  CANVAS_NODE_CONTROL.md  CODE_ANALYSIS_REPORT.md  CONFIG_PERSISTENCE_GUIDE.md  DEVELOPMENT_GUIDELINES.md  GITHUB_AUTO_UPDATE_README.md  GITHUB_SCRIPTS_SUMMARY.md  LICENSE  MENU_BAR_REFACTOR_PLAN.md  MENU_REFACTOR_COMPLETE.md  README.md  README_CN.md  TECHNICAL_DOCUMENTATION.md  TECHNICAL_DOCUMENTATION_CN.md  TOAST_EXAMPLES.md  TOAST_IMPLEMENTATION_SUMMARY.md  TOAST_INTEGRATION_COMPLETE.md  TOAST_POSITION_UPDATE.md  TOAST_QUICK_GUIDE.md  TOAST_QUICK_REFERENCE.md  TOAST_STACKING_FEATURE.md  TOAST_USAGE.md  UNIFIED_NODE_CREATION.md  UPDATE_CN.md  UPDATE_EN.md  UPDATE_GITHUB_GUIDE.md  _check_syntax.py  app_config.json  apply_menu_refactor.py  bnos_config.json  bnos_console.py  bnos_gui.py  bnos_launch_log.txt  build_bnos.spec  canvas_layout.json  color_settings.json  create_node.py  generate_source_code.py  launcher.py  pyproject.toml  (+24 more)
.bnos/: dock_positions.json
codicon-source/: package-lock.json
docs/: BNOS_优化实施步骤.md  BNOS_技术分析报告.md  BNOS_文件结构图.md  BNOS_架构图.md  BNOS_解耦开发方案.md  BNOS_重复与矛盾逻辑分析报告.md  BNOS_项目优化分析报告.md  CANVAS_VIEW_REFACTOR_PLAN.md  DEVELOPMENT_GUIDELINES.md  DOCK吸附堆叠方案实施总结.md  DRAWING_ANNOTATION_ITERATION_PLAN.md  Dock吸附堆叠尺寸持久化方案.md  Dock尺寸持久化问题记录.md  JSON区域布局结构说明.md  MIXIN_REFACTOR_PLAN.md  MULTI_ANCHOR_REFACTOR_PLAN.md  Phase12_自适应节点视图开发方案.md  README_BAK.md  README_FIXED.md  TECHNICAL_DOCUMENTATION.md  TECHNICAL_DOCUMENTATION_CN.md  TRAE_COMMUNITY_POST.md  下一步计划.md  (+21 more)
node_rust_9/: Cargo.toml  README.md  config.json  start.bat  start.sh
node_rust_9/src/: listener.rs  main.rs
(+510 files in other folders)
