[package]
name = "9"
version = "0.1.0"
edition = "2021"
authors = ["BNOS Developer"]
description = "BNOS Rust Node - 9"

[[bin]]
name = "9"
path = "src/main.rs"

[[bin]]
name = "9_listener"
path = "src/listener.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
